# RayTracer

./: .gitignore  README.md  run_all.sh
code/: CMakeLists.txt
code/include/: aabb.hpp  bdpt.hpp  bsdf.hpp  camera.hpp  group.hpp  hash_grid.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  path_guiding.hpp  path_tracer.hpp  path_vertex.hpp  plane.hpp  preview_window.hpp  progress.hpp  random.hpp  ray.hpp  render_config.hpp  renderer.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  tone_mapping.hpp  transform.hpp  triangle.hpp  vcm.hpp
code/src/: aabb.cpp  bdpt.cpp  bsdf.cpp  camera.cpp  group.cpp  hash_grid.cpp  hit.cpp  image.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  path_guiding.cpp  path_tracer.cpp  plane.cpp  preview_window.cpp  progress.cpp  ray.cpp  render_config.cpp  renderer.cpp  scene_parser.cpp  sphere.cpp  texture.cpp  tone_mapping.cpp  transform.cpp  triangle.cpp  vcm.cpp
mesh/: CornellBox-Glossy.mtl  CornellBox-Water.mtl  scene13_box.mtl
mesh/breakfast_room/: breakfast_room.mtl
mesh/mitsuba/: mitsuba_aluminum.mtl  mitsuba_copper.mtl
scenes/: scene01.txt  scene02.txt  scene03.txt  scene04.txt  scene05.txt  scene06.txt  scene07.txt  scene08.txt  scene09.txt  scene10.txt  scene11.txt  scene12.txt  scene13.txt
testcases/: scene08_cornellbox_glossy.txt  scene09_cornellbox_sphere.txt
